--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
     <header>
         <h1>Your Name</h1>
         <p>Web Designer | Frontend Developer</p>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#projects">My Personal Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <section class="about">
+    <section id="home" class="about">
         <h2>About Me</h2>
         <p>I'm a passionate designer and front-end developer who loves creating beautiful and functional websites.</p>
     </section>
-    <section class="contact">
+    <section id="projects" class="projects">
+        <h2>My Personal Projects</h2>
+        <p>Here you can showcase your personal projects with descriptions and links.</p>
+    </section>
+    <section id="contact" class="contact">
         <h2>Contact</h2>
         <p>Email: your.email@example.com</p>
         <p>GitHub: <a href="https://github.com/yourgithub" target="_blank">github.com/yourgithub</a></p>
